fix: temp fix for distance checking breaking on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,7 +87,7 @@ ul {
 svg {
   width: 100%;
   height: 100%;
-  max-height: 80vh;
+  max-height: 70vh;
   max-width: 80vw;
   overflow: visible !important;
 }
